--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Ali Abdou
 description: BSc Computer Science student at Gisma University of Applied Sciences
 
 photo_url: "/assets/images/me.png"
-work_url: https://www.gisma.com/faculty-and-team/dr-mohammad-mahdavi-academic
+#work_url: https://quack-b1.github.io/
 github_url: https://github.com/quack-b1
 linkedin_url: https://www.linkedin.com/in/abd0u/
 url: "https://quack-b1.github.io/"
