--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Ali Abdou
-description: BSc Computer Science student at Gisma University of Applied Sciences
+description: BSc Computer Science student<br>Gisma University of Applied Sciences
 
 photo_url: "/assets/images/me.png"
 #work_url: https://quack-b1.github.io/
