Add DE support for description (student)

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 theme: jekyll-theme-minimal
 title: Ali Abdou
 description: BSc Computer Science student<br>Gisma University of Applied Sciences
+description_de: BSc Informatikstudent<br>an der Gisma Fachhochschule
 
 photo_url: "/assets/images/me.png"
 #work_url: https://quack-b1.github.io/
