--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-theme: jekyll-theme-minimal
-title: Ali Abdou
+#theme: jekyll-theme-minimal
+theme: null
+title: Ali Abdou | Portfolio
 description: BSc Computer Science student<br>Gisma University of Applied Sciences
 description_de: BSc Informatikstudent<br>an der Gisma Fachhochschule
 
@@ -9,6 +10,11 @@ github_url: https://github.com/quack-b1
 linkedin_url: https://www.linkedin.com/in/abd0u/
 url: "https://quack-b1.github.io/"
 baseurl: ""
+
+collections:
+  sections:
+    output: false
+
 
 exclude:
   - Gemfile
