--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,11 @@
-theme: jekyll-theme-minimal
-title: Ali Abdou
-description: BSc Computer Science student<br>Gisma University of Applied Sciences
-description_de: BSc Informatikstudent<br>an der Gisma Fachhochschule
-
-photo_url: "/assets/images/me.png"
-#work_url: https://quack-b1.github.io/
-github_url: https://github.com/quack-b1
-linkedin_url: https://www.linkedin.com/in/abd0u/
-url: "https://quack-b1.github.io/"
-baseurl: ""
-
+title: Ali Abdou Portfolio
+description: Persönliches Portfolio von Ali Abdou
+theme: minima
 exclude:
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-
-# plugins:
-#   - jekyll-feed
-#   - jekyll-gist
-#   - jekyll-paginate-v2
-#   - jekyll-seo-tag
-#   - jekyll-sitemap
+  - node_modules
+  - vendor
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: home
