--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,6 @@
-<<<<<<< HEAD
 title: Ali Abdou Portfolio
 description: Persönliches Portfolio von Ali Abdou
-theme: jekyll-theme-minimal
-#locale: de
-languages:
-  - de
-  - en
-=======
-theme: jekyll-theme-minimal
-title: Ali Abdou
-description: BSc Computer Science student<br>Gisma University of Applied Sciences
-description_de: BSc Informatikstudent<br>an der Gisma Fachhochschule
-
-photo_url: "/assets/images/me.png"
-#work_url: https://quack-b1.github.io/
-github_url: https://github.com/quack-b1
-linkedin_url: https://www.linkedin.com/in/abd0u/
-url: "https://quack-b1.github.io/"
-baseurl: ""
->>>>>>> parent of f64f6cb (Update Language Support)
-
+theme: minima
 exclude:
   - node_modules
   - vendor
