--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@ baseurl: ""
 exclude:
   - node_modules
   - vendor
+  -
 defaults:
   - scope:
       path: ""
     values:
-      layout: home
+      layout: defauly
