Update email icon
Add site.email to config for easier editing, as well as fix SVG path for the email icon

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Ali Abdou
 description: BSc Computer Science student<br>Gisma University of Applied Sciences
 description_de: BSc Informatikstudent<br>an der Gisma Fachhochschule
 
+email: me@aliabdou.de
 photo_url: "/assets/images/me.png"
 #work_url: https://quack-b1.github.io/
 github_url: https://github.com/quack-b1
